tests/errors/align_multiline_comment.php
<?php

declare(strict_types=1);

/**
 * Blablabla
 * Blablabla
BLablabla
 * blabla
 */
